@@ -25,6 +25,9 @@ Release date: TBA
 
   Closes #4301
 
+* By default the similarity checker will now ignore imports and ignore function signatures when computing
+  duplication. If you want to keep the previous behaviour set ``ignore-imports`` and ``ignore-signatures`` to ``False``.
+
 * Improved recognition of namespace packages. They should no longer be added to ``sys.path``
   which should prevent various issues with false positives.
   Because of the difficulties with mirroring the python import mechanics we would gladly
